--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "~2.0.0",
     "@angular/platform-browser-dynamic": "~2.0.0",
     "@angular/router": "~3.0.0",
+    "@types/jquery": "^2.0.33",
     "@types/socket.io-client": "^1.4.27",
     "core-js": "^2.4.1",
+    "jquery": "^3.1.1",
     "rxjs": "5.0.0-beta.12",
     "socket.io-client": "^1.5.0",
     "ts-helpers": "^1.1.1",
